final assignment 1 tweaks

--- a/aboutus.html
+++ b/aboutus.html
@@ -47,9 +47,11 @@
         </div>
 
 
-        <div>
-            <div class="row row-content align-items-center">
+        <div class="row row-content">
+            <div>
                 <h2>Corporate Leadership</h2>
+            </div>
+            <div class="row row-header">
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <div class="d-none d-sm-block">
                   <p>Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
@@ -66,6 +68,7 @@
                 <div class="d-none d-sm-block">
                   <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
                 </div>
+              </div>
             </div>
        </div>
 
