final assignment 1 more tweaks

--- a/aboutus.html
+++ b/aboutus.html
@@ -18,12 +18,12 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <!-- <div class="col-12 col-sm-6"> -->
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                </div>
-                <div class="col-12 col-sm">
-                </div>
+                <!-- </div> -->
+                <!-- <div class="col-12 col-sm">
+                </div> -->
             </div>
         </div>
     </header>
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="row row-header align-items-center">
+        <div class="row row-content align-items-center">
             <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
@@ -47,7 +47,7 @@
         </div>
 
 
-        <div class="row row-content">
+        <div class="row row-header">
             <div>
                 <h2>Corporate Leadership</h2>
             </div>
