--- a/aboutus.html
+++ b/aboutus.html
@@ -18,25 +18,21 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <!-- <div class="col-12 col-sm-6"> -->
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                <!-- </div> -->
-                <!-- <div class="col-12 col-sm">
-                </div> -->
+              <div class="col col-sm-9">
+                <h1>Ristorante con Fusion</h1>
+                <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+              </div>
             </div>
         </div>
     </header>
 
     <div class="container">
         <div>
-            <div>
                <h3>About Us</h3>
                <hr>
-            </div>
         </div>
 
-        <div class="row row-content align-items-center">
+        <div class="row row-content">
             <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
@@ -47,11 +43,10 @@
         </div>
 
 
-        <div class="row row-header">
-            <div>
+        <div class="row row-content">
+            <div class="col">
                 <h2>Corporate Leadership</h2>
-            </div>
-            <div class="row row-header">
+
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <div class="d-none d-sm-block">
                   <p>Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
@@ -68,8 +63,7 @@
                 <div class="d-none d-sm-block">
                   <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
                 </div>
-              </div>
-            </div>
+
        </div>
 
     </div>
