--- a/aboutus.html
+++ b/aboutus.html
@@ -21,11 +21,11 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand mr-auto" href="./index.html">Ristorante Con Fusion</a>
+      <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
       <div class="collapse navbar-collapse" id="Navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
-          <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About</a></li>
+          <li class="nav-item active"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
           <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
         </ul>
@@ -109,13 +109,14 @@
                 </div>
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
-                    <address>
+                    <address style="font-size: 100%"?>
     		              121, Clear Water Bay Road<br>
     		              Clear Water Bay, Kowloon<br>
     		              HONG KONG<br>
                       <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
     		              <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-    		              <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
+    		              <i class="fa fa-envelope fa-lg"></i>: 
+                        <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
