--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                   <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                  <button type="button" class="btn bnt-primary btn-block">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -107,7 +110,82 @@
               </div>
             </div>
           </div>
-    </div>
+<!--     </div> -->
+
+
+      <div class="row row-header">
+        <div class="col-12">
+          <h3>Reserve a Table</h3>
+        </div>
+        <div class="col-12 col-md-9">
+          <form>
+
+            <div class="form-group row">
+
+              <label for="number-of-guests" class="col-md-2 col-form-label">Number of Guests</label>
+
+                 <div class="form-check form-check-inline ">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+                  </label>
+                </div>
+                <div class="form-check form-check-inline disabled">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled> 3
+                  </label>
+                </div>
+                <div class="form-check form-check-inline disabled">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" disabled> 4
+                  </label>
+                </div>
+                <div class="form-check form-check-inline disabled">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" disabled> 5
+                  </label>
+                </div> 
+                <div class="form-check form-check-inline disabled">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6" disabled> 6
+                  </label>
+                </div>        
+            </div>
+
+
+
+            <div class="form-group row">
+               <label for="date-time" class="col-md-2 col-form-label">Date and Time</label>
+                <div class="col-5 col-md-3">
+                  <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                </div>
+<!--                 <div class="col-7 col-md-7"> -->
+                <div class="col-5 col-md-3">
+                  <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                </div>
+            </div>
+
+
+
+            <div class="form-group row">
+              <div class="offset-md-2 col-md-10">
+                <button type="submit" class="btn btn-primary">Reserve</button>
+              </div>
+            </div> 
+
+          </form>
+
+          </div>
+            <div class="col-12 col-md">
+            </div>
+        </div>
+      </div>
+
+
 
     <footer class="footer">
         <div class="container">
