Assignment 2 first cut

--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,8 @@
   <kink rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Ristorante Con Fusion: About Us</title>
-</head>
+
+  </head>
 
 <body>
   <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
@@ -31,7 +32,7 @@
         </ul>
       </div>
     </div>
-  </nav>"
+  </nav>
 
     <header class="jumbotron">
         <div class="container">
