--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
   <kink rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
   <link rel="stylesheet" href="css/styles.css">
+ 
+  <style>
+    .btn-block {
+      background-color: #FFBE00;
+      color: black;
+    } 
+
+    .card-header {
+      background-color: #FFBE00;
+      color: floralwhite;
+    }
+
+    .spacer {
+      margin-left: 20px;
+    }
+  </style>
+
   <title>Ristorante Con Fusion</title>
 
 </head>
@@ -32,32 +49,33 @@
         </ul>
       </div>
     </div>
-  </nav>"
+  </nav>
 
-    <header class="jumbotron">
+   <header class="jumbotron">
         <div class="container">
-            <div class="row row-header">
+            <div class="row row-header ">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
+
                 <div class="col-12 col-sm-3 align-self-center">
                   <img src="img/logo.png" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                  <button type="button" class="btn bnt-primary btn-block">Reserve Table</button>
+                <div class="col-12 col-sm-3 align-self-center">
+                  <a class="btn btn-sm btn-block" href="#reserve-table" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
-    </header>
+   </header>
 
-    <div class="container">
+  <div class="container">
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <div class="col-12 col-sm-4 order-sm-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
 
-            <div class="col col-sm order-sm-first col-md">
+            <div class="col col-sm order-sm-first">
               <div class="media">
                 <img class="d-flex mr-3 img-thumbnail align-self-center"
                     src="img/uthappizza.png" alt="uthappizza">
@@ -73,11 +91,11 @@
 
 
         <div class="row row-content align-items-center">
-          <div class="col-12 col-sm-4 col-md-3 order_sm-first">
+          <div class="col-12 col-sm-4 order_sm-first">
             <h3>This Month's Promotions</h3>
           </div>
 
-            <div class="col col-sm col-md">
+            <div class="col col-sm">
               <div class="media">
 
                 <div class="media-body">
@@ -94,10 +112,10 @@
          </div>       
 
         <div class="row row-content align-items-center">
-            <div  class="col-12 col-sm-4 order-sm-last col-md-3">
+            <div  class="col-12 col-sm-4 order-sm-last">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
+            <div class="col col-sm order-sm-first">
               <div class="media">
                 <img class="d-flex mr-3 img-thumbnail align-self-center"
                     src="img/alberto.png" alt="alberto">
@@ -110,81 +128,68 @@
               </div>
             </div>
           </div>
-<!--     </div> -->
 
+          <div class="row row-content align-items-center" id="reserve-table">
 
-      <div class="row row-header">
-        <div class="col-12">
-          <h3>Reserve a Table</h3>
-        </div>
-        <div class="col-12 col-md-9">
-          <form>
+            <div class="card col-12 offset-sm-2 col-sm-8">
+              <h3 class="card-header">Reserve a Table</h3>
+            <div class="card-body">
 
-            <div class="form-group row">
-
-              <label for="number-of-guests" class="col-md-2 col-form-label">Number of Guests</label>
-
-                 <div class="form-check form-check-inline ">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
-                  </label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
-                  </label>
-                </div>
-                <div class="form-check form-check-inline disabled">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled> 3
-                  </label>
-                </div>
-                <div class="form-check form-check-inline disabled">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" disabled> 4
-                  </label>
-                </div>
-                <div class="form-check form-check-inline disabled">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" disabled> 5
-                  </label>
-                </div> 
-                <div class="form-check form-check-inline disabled">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6" disabled> 6
-                  </label>
-                </div>        
-            </div>
-
-
-
-            <div class="form-group row">
-               <label for="date-time" class="col-md-2 col-form-label">Date and Time</label>
-                <div class="col-5 col-md-3">
-                  <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                </div>
-<!--                 <div class="col-7 col-md-7"> -->
-                <div class="col-5 col-md-3">
-                  <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                </div>
-            </div>
-
-
-
-            <div class="form-group row">
-              <div class="offset-md-2 col-md-10">
-                <button type="submit" class="btn btn-primary">Reserve</button>
+            <form>
+              <div class="form-group row">
+                <label for="number-of-guests" class="col-sm-2 col-form-label">Number of Guests</label>
+                   <div class="form-check form-check-inline spacer">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline disabled">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled> 3
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline disabled">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" disabled> 4
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline disabled">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" disabled> 5
+                    </label>
+                  </div> 
+                  <div class="form-check form-check-inline disabled">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6" disabled> 6
+                    </label>
+                  </div>        
               </div>
-            </div> 
 
-          </form>
+              <div class="form-group row align-items-center">
+                 <label for="date-time" class="col-sm-2 col-form-label">Date and Time</label>
+                  <div class="col-12 col-sm-5">
+                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                  </div>
+                  <div class="col-12 col-sm-5">
+                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                  </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="offset-sm-2 col-sm-10">
+                  <button type="submit" class="btn btn-primary">Reserve</button>
+                </div>
+              </div> 
+            </form>
 
           </div>
-            <div class="col-12 col-md">
-            </div>
-        </div>
       </div>
-
+    </div>
 
 
     <footer class="footer">
