--- a/index.html
+++ b/index.html
@@ -14,18 +14,13 @@
   <link rel="stylesheet" href="css/styles.css">
  
   <style>
-    .btn-block {
-      background-color: #FFBE00;
-      color: black;
-    } 
-
     .card-header {
       background-color: #FFBE00;
       color: floralwhite;
     }
 
-    .spacer {
-      margin-left: 20px;
+    .radio-inline {
+      margin-left: 10px;
     }
   </style>
 
@@ -63,7 +58,7 @@
                   <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                  <a class="btn btn-sm btn-block" href="#reserve-table" role="button">Reserve Table</a>
+                  <a class="btn btn-sm btn-block btn-warning" href="#reserve-table" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -136,39 +131,20 @@
             <div class="card-body">
 
             <form>
+
               <div class="form-group row">
-                <label for="number-of-guests" class="col-sm-2 col-form-label">Number of Guests</label>
-                   <div class="form-check form-check-inline spacer">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
-                    </label>
+                <label for="optradio" class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                  <div class = "col-md-10 col-sm align-self-center">
+                    <label class="radio-inline"><input type = "radio" id ="optradio1" name= "optradio">1</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio2" name= "optradio">2</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio3" name= "optradio">3</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio4" name= "optradio">4</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio5" name= "optradio">5</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio6" name= "optradio">6</label>
                   </div>
-                  <div class="form-check form-check-inline">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline disabled">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled> 3
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline disabled">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4" disabled> 4
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline disabled">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5" disabled> 5
-                    </label>
-                  </div> 
-                  <div class="form-check form-check-inline disabled">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6" disabled> 6
-                    </label>
-                  </div>        
-              </div>
+               </div>
+
+
 
               <div class="form-group row align-items-center">
                  <label for="date-time" class="col-sm-2 col-form-label">Date and Time</label>
