--- a/index.html
+++ b/index.html
@@ -87,6 +87,65 @@
     </div>
   </div>
 
+  <div id="reserveModal" class="modal fade" role="dialog">
+   <div class="modal-dialog modal-lg" role="content">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Reserve a Table</h4>
+          <button type="button" class="close" data-dismiss="modal">
+            &times;
+          </button>  
+        </div>
+        <div class="modal-body">
+          <form>
+
+              <div class="form-group row">
+                <label for="optradio" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                  <div class = "col-md-10 col-sm align-self-center">
+                    <label class="radio-inline"><input type = "radio" id ="optradio1" name= "optradio">1</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio2" name= "optradio">2</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio3" name= "optradio">3</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio4" name= "optradio">4</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio5" name= "optradio">5</label>
+                    <label class="radio-inline"><input type = "radio" id ="optradio6" name= "optradio">6</label>
+                  </div>
+               </div>
+
+              <div class="form-group row ">
+                <label for="section" class="col-12 col-sm-2 col-form-label">Section</label>
+                <div class="col col-sm-2">
+                  <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-secondary btn-sm btn-success active">
+                      <input type="radio" name="section" id="non-smoking" autocomplete="off" checked>Non-Smoking</label>
+                    <label class="btn btn-secondary btn-sm btn-danger">
+                      <input type="radio" name="section" id="smoking" autocomplete="off">Smoking</label>
+                  </div>
+                </div>
+               </div>
+
+              <div class="form-group row align-items-center">
+                 <label for="date-time" class="col-sm-2 col-form-label">Date and Time</label>
+                  <div class="col-12 col-sm-5">
+                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                  </div>
+                  <div class="col-12 col-sm-5">
+                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                  </div>
+              </div>
+
+              <div class="form-group row align-items-center">
+                <div class="offset-sm-2 col-sm-10">
+                  <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                  <button type="submit" class="btn btn-primary ml-1">Reserve</button>   
+                </div>     
+              </div>
+
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
    <header class="jumbotron">
         <div class="container">
             <div class="row row-header ">
@@ -99,11 +158,9 @@
                   <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                  <a class="btn btn-block nav-link btn-warning" 
-                    data-toggle="tooltip" data-html="true" 
-                    title="Or Call us at <br><strong>+852 12345678</strong>"
-                    data-placement="bottom"
-                    href="#reserveform" role="button">Reserve Table</a>
+                  <a class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#reserveModal"
+                    role="button">Reserve Table
+                  </a>
                 </div>
             </div>
         </div>
@@ -157,6 +214,7 @@
         </div>
       </div>
     </div>
+    
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -214,48 +272,9 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="row row-content align-items-center" id="reserveform">
-
-            <div class="card col-12 offset-sm-2 col-sm-8">
-              <h3 class="card-header">Reserve a Table</h3>
-            <div class="card-body">
-
-            <form>
-
-              <div class="form-group row">
-                <label for="optradio" class="col-12 col-md-2 col-form-label">Number of Guests</label>
-                  <div class = "col-md-10 col-sm align-self-center">
-                    <label class="radio-inline"><input type = "radio" id ="optradio1" name= "optradio">1</label>
-                    <label class="radio-inline"><input type = "radio" id ="optradio2" name= "optradio">2</label>
-                    <label class="radio-inline"><input type = "radio" id ="optradio3" name= "optradio">3</label>
-                    <label class="radio-inline"><input type = "radio" id ="optradio4" name= "optradio">4</label>
-                    <label class="radio-inline"><input type = "radio" id ="optradio5" name= "optradio">5</label>
-                    <label class="radio-inline"><input type = "radio" id ="optradio6" name= "optradio">6</label>
-                  </div>
-               </div>
+        </div>
 
 
-
-              <div class="form-group row align-items-center">
-                 <label for="date-time" class="col-sm-2 col-form-label">Date and Time</label>
-                  <div class="col-12 col-sm-5">
-                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                  </div>
-                  <div class="col-12 col-sm-5">
-                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                  </div>
-              </div>
-
-              <div class="form-group row">
-                <div class="offset-sm-2 col-sm-10">
-                  <button type="submit" class="btn btn-primary">Reserve</button>
-                </div>
-              </div> 
-            </form>
-
-          </div>
       </div>
     </div>
 
@@ -305,11 +324,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-    </script>
+
 </body>
 
 </html>
