--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
   <kink rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
   <link rel="stylesheet" href="css/styles.css">
- 
+
   <style>
     .card-header {
       background-color: #FFBE00;
@@ -57,7 +57,7 @@
           <h4 class="modal-title">Login</h4>
           <button type="button" class="close" data-dismiss="modal">
             &times;
-          </button>  
+          </button>
         </div>
         <div class="modal-body">
           <form>
@@ -79,7 +79,7 @@
             </div>
             <div class="form-row">
               <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+              <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
             </div>
           </form>
         </div>
@@ -94,7 +94,7 @@
           <h4 class="modal-title">Reserve a Table</h4>
           <button type="button" class="close" data-dismiss="modal">
             &times;
-          </button>  
+          </button>
         </div>
         <div class="modal-body">
           <form>
@@ -136,8 +136,8 @@
               <div class="form-group row align-items-center">
                 <div class="offset-sm-2 col-sm-10">
                   <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-primary ml-1">Reserve</button>   
-                </div>     
+                  <button type="submit" class="btn btn-primary ml-1">Reserve</button>
+                </div>
               </div>
 
           </form>
@@ -177,7 +177,7 @@
               <div class="carousel-caption d-none d-md-block">
                   <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                   <p class="d-none d-sm-block">
-                      A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>               
+                      A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
               </div>
             </div>
            <div class="carousel-item">
@@ -187,7 +187,7 @@
                 <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                 <p class="d-none d-sm-block">
                   Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-              </div>             
+              </div>
             </div>
            <div class="carousel-item">
               <img class="d-block img-fluid"
@@ -196,8 +196,8 @@
                 <h2>Alberto Somayya</h2>
                   <h4>Executive Chef</h4>
                   <p class="d-none d-sm-block">
-                    Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>       
-              </div>              
+                    Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+              </div>
             </div>
           </div>
           <ol class="carousel-indicators">
@@ -211,120 +211,137 @@
           <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon"></span>
           </a>
-        </div>
-      </div>
-    </div>
-    
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-
-            <div class="col col-sm order-sm-first">
-              <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center"
-                    src="img/uthappizza.png" alt="uthappizza">
-                <div class="media-body">
-
-                  <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                  <p class="d-none d-sm-block">
-                      A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-                </div>
-              </div>
-            </div>
-        </div>
-
-
-        <div class="row row-content align-items-center">
-          <div class="col-12 col-sm-4 order_sm-first">
-            <h3>This Month's Promotions</h3>
+          <div class="btn-group" id="carouselButtons">
+            <button class="btn btn-danger btn-sm" id="carousel-pause">
+              <span class="fa fa-pause"></span>
+            </button>
+            <button class="btn btn-danger btn-sm" id="carousel-play">
+              <span class="fa fa-play"></span>
+            </button>
           </div>
-
-            <div class="col col-sm">
-              <div class="media">
-
-                <div class="media-body">
-
-                  <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                  <p class="d-none d-sm-block">
-                    Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                </div>
-                  <img class="d-flex mr-3 img-thumbnail align-self-center" 
-                    src="img/buffet.png" alt="buffet">
-              </div>
-            </div>          
-
-         </div>       
-
-        <div class="row row-content align-items-center">
-            <div  class="col-12 col-sm-4 order-sm-last">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col col-sm order-sm-first">
-              <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center"
-                    src="img/alberto.png" alt="alberto">
-                <div clas="media-body">
-                  <h2 class="mt-0">Alberto Somayya</h2>
-                  <h4>Executive Chef</h4>
-                  <p class="d-none d-sm-block">
-                    Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                </div>
-              </div>
-            </div>
         </div>
-
-
       </div>
     </div>
 
-
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 offset-1 col-sm-2">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="./aboutus.html">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="./contactus.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-7  col-sm-5">
-                    <h5>Our Address</h5>
-                    <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
-                </div>
-                <div class="col-12 col-sm-4 align-self-center">
-                    <div class="text-center">
-                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-                        <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
-                    </div>
-                </div>
-           </div>
-           <div class="row justify-content-center">
-                <div class="col=auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
-                </div>
-           </div>
+    <div class="row row-content align-items-center">
+        <div class="col-12 col-sm-4 order-sm-last">
+            <h3>Our Lipsmacking Culinary Creations</h3>
         </div>
-    </footer>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+        <div class="col col-sm order-sm-first">
+          <div class="media">
+            <img class="d-flex mr-3 img-thumbnail align-self-center"
+                src="img/uthappizza.png" alt="uthappizza">
+            <div class="media-body">
+
+              <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+              <p class="d-none d-sm-block">
+                  A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+            </div>
+          </div>
+        </div>
+    </div>
+
+
+    <div class="row row-content align-items-center">
+      <div class="col-12 col-sm-4 order_sm-first">
+        <h3>This Month's Promotions</h3>
+      </div>
+
+        <div class="col col-sm">
+          <div class="media">
+
+            <div class="media-body">
+
+              <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+              <p class="d-none d-sm-block">
+                Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            </div>
+              <img class="d-flex mr-3 img-thumbnail align-self-center"
+                src="img/buffet.png" alt="buffet">
+          </div>
+        </div>
+
+     </div>
+
+      <div class="row row-content align-items-center">
+          <div  class="col-12 col-sm-4 order-sm-last">
+              <h3>Meet our Culinary Specialists</h3>
+          </div>
+          <div class="col col-sm order-sm-first">
+            <div class="media">
+              <img class="d-flex mr-3 img-thumbnail align-self-center"
+                  src="img/alberto.png" alt="alberto">
+              <div clas="media-body">
+                <h2 class="mt-0">Alberto Somayya</h2>
+                <h4>Executive Chef</h4>
+                <p class="d-none d-sm-block">
+                  Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+              </div>
+            </div>
+          </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <footer class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-4 offset-1 col-sm-2">
+                  <h5>Links</h5>
+                  <ul class="list-unstyled">
+                      <li><a href="#">Home</a></li>
+                      <li><a href="./aboutus.html">About</a></li>
+                      <li><a href="#">Menu</a></li>
+                      <li><a href="./contactus.html">Contact</a></li>
+                  </ul>
+              </div>
+              <div class="col-7  col-sm-5">
+                  <h5>Our Address</h5>
+                  <address>
+	              121, Clear Water Bay Road<br>
+	              Clear Water Bay, Kowloon<br>
+	              HONG KONG<br>
+	              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
+	              <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
+	              <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
+	           </address>
+              </div>
+              <div class="col-12 col-sm-4 align-self-center">
+                  <div class="text-center">
+                      <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
+                      <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
+                      <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
+                      <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
+                      <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
+                      <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
+                  </div>
+              </div>
+         </div>
+         <div class="row justify-content-center">
+              <div class="col=auto">
+                  <p>© Copyright 2018 Ristorante Con Fusion</p>
+              </div>
+         </div>
+      </div>
+  </footer>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#mycarousel').carousel({interval: 2000});
+      $('#carousel-pause').click(function() {
+        $('#mycarousel').carousel('pause')
+      });
+      $('#carousel-play').click(function() {
+        $('#mycarousel').carousel('cycle')
+      });
+    }
+  </script>
 </body>
 
 </html>
