git scripts part 1

--- a/contactus.html
+++ b/contactus.html
@@ -121,7 +121,7 @@
                 <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
               </div>
             </div>
-   
+
             <div class="form-group row">
               <div class="col-md-6 offset-md-2">
                 <div class="form-check">
@@ -144,13 +144,13 @@
               <div class="col-md-10">
                 <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
               </div>
-            </div>   
+            </div>
 
             <div class="form-group row">
               <div class="offset-md-2 col-md-10">
                 <button type="submit" class="btn btn-primary">Send Feedback</button>
               </div>
-            </div> 
+            </div>
 
           </form>
 
@@ -208,5 +208,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
