--- a/aboutus.html
+++ b/aboutus.html
@@ -78,7 +78,7 @@
                     <dt class="col-6">Last Year's Turnover</dt>
                     <dd class="col-6">$1,250,375</dd>
                     <dt class="col-6">Employees</dt>
-                    <dd class="col-6">40</dd>                   
+                    <dd class="col-6">40</dd>
                   </dl>
               </div>
               </div>
@@ -89,7 +89,7 @@
                   <p class="mb-0">You better cut the pizza in four pieces
                         because I'm not hungry enough to eat six.
                   </p>
-                  <footer class="blockquote-footer">Yogi Berra, 
+                  <footer class="blockquote-footer">Yogi Berra,
                               <cite title="Source Title">The Wit and Wisdom of Yogi Berr, P. Pepe, Diversion Books, 2014</cite>
                   </footer>
                 </blockquote>
@@ -111,14 +111,14 @@
                         <a data-toggle="collapse" data-target="#peter">
                           Peter Pan <small>Chief Epicurious Officer</small>
                         </a>
-                      </h3> 
+                      </h3>
                     </div>
 
                     <div role="tabpanel" class="collapse show" id="peter" data-parent="#accordion">
                       <div class="card-body">
-                       <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections</p>   
+                       <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections</p>
                       </div>
-                    </div> 
+                    </div>
                   </div>
 
                  <div class="card">
@@ -143,14 +143,14 @@
                       <a data-toggle="collapse" data-target="#agumbe">
                           Agumbe Tang <small>Chief Taste Officer</small>
                       </a>
-                    </h3> 
+                    </h3>
                   </div>
 
                    <div role="tabpanel" class="collapse" id="agumbe" data-parent="#accordion">
                     <div class="card-body">
-                      <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p> 
+                      <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
                     </div>
-                  </div> 
+                  </div>
                 </div>
 
                 <div class="card">
@@ -159,14 +159,14 @@
                       <a data-toggle="collapse" data-target="#alberto">
                         Alberto Somayya <small>Executive Chef</small>
                       </a>
-                    </h3> 
+                    </h3>
                   </div>
 
                   <div role="tabpanel" class="collapse" id="alberto" data-parent="#accordion">
                     <div class="card-body">
-                      <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>    
+                      <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
                     </div>
-                  </div> 
+                  </div>
                 </div>
             </div>
 
@@ -244,7 +244,7 @@
     		              HONG KONG<br>
                       <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
     		              <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-    		              <i class="fa fa-envelope fa-lg"></i>: 
+    		              <i class="fa fa-envelope fa-lg"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
@@ -270,6 +270,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
